<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llSceneRoot"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:animateLayoutChanges="true"
    tools:context="com.android2ee.droidcon.greece.animation.SceneActivity">
    <ImageView
        android:id="@+id/imvSprite1"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:background="@color/primary_dark"
        android:src="@drawable/attack_magic_animation"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <TextView
            android:id="@+id/txvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="@string/txvText_transition"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/hello_world"
            />

        <Button
            android:id="@+id/btnEdit"
            android:transitionName="@string/btnEdit_transition"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignBottom="@id/txvResult"
            android:layout_gravity="right"
            android:layout_toRightOf="@id/txvResult"
            android:background="@mipmap/ic_edit"/>

        <ImageButton
            android:id="@+id/ibtnSprite"
            android:transitionName="@string/imvSprite_transition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:src="@drawable/attack_magic_animation"
            />

        <Button
            android:id="@+id/btnDrawable"
            android:transitionName="@string/btnDrawable_transition"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/ic_drawable"/>

    </RelativeLayout>
</LinearLayout>
